--- a/theme.toml
+++ b/theme.toml
@@ -5,7 +5,7 @@ name = "PaperMod"
 license = "MIT"
 licenselink = "https://github.com/adityatelange/hugo-PaperMod/blob/master/LICENSE"
 description = "A fast, clean, responsive Hugo theme"
-homepage = "https://adityatelange.github.io/hugo-PaperMod/"
+homepage = "https://diydiscgolfcart.github.io"
 tags = [
   "responsive",
   "simple",
