--- a/config.yml
+++ b/config.yml
@@ -1,4 +1,4 @@
-baseURL: "https://diydiscgolfcart.github.io" 
+baseURL: "https://www.diydiscgolfcart.com" 
 title: DIY Disc Golf Cart
 paginate: 5
 theme: hugo-PaperMod
